{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 17,
  "lineage": "d71639b8-7c9a-550c-a4b0-826d9fd6b33e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-00da3531f5a5352f0",
            "domain": "vpc",
            "id": "eipalloc-02bfeba276e9a5883",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-08f1fd77cf0d167ae",
            "private_dns": "ip-10-0-1-50.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-52-74-218-23.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.74.218.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-nic",
            "aws_security_group.sgweb",
            "aws_subnet.public-subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.2.50",
            "association_id": "eipassoc-056ef064bf74eaec8",
            "domain": "vpc",
            "id": "eipalloc-0dc5111988c5d1ef8",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-01d302e5b3c315ee2",
            "private_dns": "ip-10-0-2-50.ap-southeast-1.compute.internal",
            "private_ip": "10.0.2.50",
            "public_dns": "ec2-54-151-200-146.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.151.200.146",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.db-nic",
            "aws_security_group.sgdb",
            "aws_subnet.private-subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:754096986372:internet-gateway/igw-0afe9bdcde42fdfe3",
            "id": "igw-0afe9bdcde42fdfe3",
            "owner_id": "754096986372",
            "tags": {
              "Name": "VPC IGW"
            },
            "vpc_id": "vpc-0823ac2225109217c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "db-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-01d302e5b3c315ee2",
            "ipv6_address_count": 0,
            "mac_address": "02:67:95:82:35:a0",
            "private_dns_name": "ip-10-0-2-50.ap-southeast-1.compute.internal",
            "private_ip": "10.0.2.50",
            "private_ips": [
              "10.0.2.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0e9eea5886155e0a1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06efed33f617539db"
          },
          "dependencies": [
            "aws_security_group.sgdb",
            "aws_subnet.private-subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-08f1fd77cf0d167ae",
            "ipv6_address_count": 0,
            "mac_address": "02:c7:e2:ea:d0:14",
            "private_dns_name": "ip-10-0-1-50.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0082f8521b03af79a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b771ff7de7b2d3a4"
          },
          "dependencies": [
            "aws_security_group.sgweb",
            "aws_subnet.public-subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-054d1743cff4bbb39",
            "owner_id": "754096986372",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0afe9bdcde42fdfe3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private Subnet RT"
            },
            "vpc_id": "vpc-0823ac2225109217c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d8bb7cee407c53e5",
            "owner_id": "754096986372",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0afe9bdcde42fdfe3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet RT"
            },
            "vpc_id": "vpc-0823ac2225109217c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbfa5e0d4aa1b173",
            "route_table_id": "rtb-054d1743cff4bbb39",
            "subnet_id": "subnet-06efed33f617539db"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web-private-rt",
            "aws_subnet.private-subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2273fe0953e04e3",
            "route_table_id": "rtb-0d8bb7cee407c53e5",
            "subnet_id": "subnet-0b771ff7de7b2d3a4"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:754096986372:security-group/sg-0e9eea5886155e0a1",
            "description": "Allow traffic from public subnet",
            "egress": [],
            "id": "sg-0e9eea5886155e0a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_test_web",
            "name_prefix": "",
            "owner_id": "754096986372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0823ac2225109217c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:754096986372:security-group/sg-0082f8521b03af79a",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0082f8521b03af79a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_test_web",
            "name_prefix": "",
            "owner_id": "754096986372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0823ac2225109217c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:754096986372:subnet/subnet-06efed33f617539db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06efed33f617539db",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "754096986372",
            "tags": {
              "Name": "Database Private Subnet"
            },
            "vpc_id": "vpc-0823ac2225109217c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:754096986372:subnet/subnet-0b771ff7de7b2d3a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b771ff7de7b2d3a4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "754096986372",
            "tags": {
              "Name": "Web Public Subnet"
            },
            "vpc_id": "vpc-0823ac2225109217c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:754096986372:vpc/vpc-0823ac2225109217c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b492fbd4f16aa36",
            "default_route_table_id": "rtb-0707a6d523246864d",
            "default_security_group_id": "sg-0bafe7b1956047c03",
            "dhcp_options_id": "dopt-28b0454e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0823ac2225109217c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0707a6d523246864d",
            "owner_id": "754096986372",
            "tags": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}